--- a/src/output.css
+++ b/src/output.css
@@ -906,6 +906,9 @@
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
+  .whitespace-nowrap {
+    white-space: nowrap;
+  }
   .text-\[\#5BE85B\] {
     color: #5BE85B;
   }
@@ -1165,9 +1168,9 @@
       top: calc(var(--spacing) * 5);
     }
   }
-  .md\:top-7 {
+  .md\:top-8 {
     @media (width >= 48rem) {
-      top: calc(var(--spacing) * 7);
+      top: calc(var(--spacing) * 8);
     }
   }
   .md\:-left-\[30\%\] {
@@ -1258,6 +1261,11 @@
   .md\:rounded-3xl {
     @media (width >= 48rem) {
       border-radius: var(--radius-3xl);
+    }
+  }
+  .md\:pb-0 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 0);
     }
   }
   .md\:text-5xl {
