--- a/src/output.css
+++ b/src/output.css
@@ -556,23 +556,8 @@
   .top-6 {
     top: calc(var(--spacing) * 6);
   }
-  .top-\[21px\] {
-    top: 21px;
-  }
-  .top-\[22\] {
-    top: 22;
-  }
-  .top-\[2\] {
-    top: 2;
-  }
-  .top-\[50\%\] {
-    top: 50%;
-  }
-  .top-\[50\] {
-    top: 50;
-  }
-  .top-\[5\] {
-    top: 5;
+  .top-\[5\%\] {
+    top: 5%;
   }
   .top-\[100px\] {
     top: 100px;
@@ -582,21 +567,6 @@
   }
   .top-\[1px\] {
     top: 1px;
-  }
-  .top-\[20px\] {
-    top: 20px;
-  }
-  .top-\[22p\] {
-    top: 22p;
-  }
-  .top-\[22px\] {
-    top: 22px;
-  }
-  .top-\[2px\] {
-    top: 2px;
-  }
-  .top-\[5\%\] {
-    top: 5%;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -630,15 +600,6 @@
   }
   .left-10 {
     left: calc(var(--spacing) * 10);
-  }
-  .left-\[50\%\] {
-    left: 50%;
-  }
-  .left-\[50\] {
-    left: 50;
-  }
-  .left-\[5\] {
-    left: 5;
   }
   .left-\[30\%\] {
     left: 30%;
@@ -825,26 +786,6 @@
     --tw-translate-y: calc(var(--spacing) * 0);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .translate-\[-50\%\] {
-    --tw-translate-x: -50%;
-    --tw-translate-y: -50%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[50\%\] {
-    --tw-translate-x: 50%;
-    --tw-translate-y: 50%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[50\] {
-    --tw-translate-x: 50;
-    --tw-translate-y: 50;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-\[5\] {
-    --tw-translate-x: 5;
-    --tw-translate-y: 5;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-1 {
     --tw-translate-x: calc(var(--spacing) * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
@@ -988,9 +929,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .bg-\[\#2B2A2A\] {
-    background-color: #2B2A2A;
-  }
   .bg-\[\#131417\] {
     background-color: #131417;
   }
@@ -1000,17 +938,11 @@
   .bg-\[\#222222\] {
     background-color: #222222;
   }
+  .bg-\[\#2B2A2A\] {
+    background-color: #2B2A2A;
+  }
   .bg-\[\#2E2C29\] {
     background-color: #2E2C29;
-  }
-  .bg-\[\#\] {
-    background-color: #;
-  }
-  .bg-\[131417\] {
-    background-color: 131417;
-  }
-  .bg-\[bg-\[\#131417\]\] {
-    background-color: bg-[#131417];
   }
   .bg-gray-800 {
     background-color: var(--color-gray-800);
@@ -1032,9 +964,6 @@
   }
   .bg-yellow-500 {
     background-color: var(--color-yellow-500);
-  }
-  .to-0\% {
-    --tw-gradient-to-position: 0%;
   }
   .object-cover {
     object-fit: cover;
@@ -1135,8 +1064,14 @@
   .pb-20 {
     padding-bottom: calc(var(--spacing) * 20);
   }
+  .pb-24 {
+    padding-bottom: calc(var(--spacing) * 24);
+  }
   .pb-26 {
     padding-bottom: calc(var(--spacing) * 26);
+  }
+  .pb-28 {
+    padding-bottom: calc(var(--spacing) * 28);
   }
   .pb-32 {
     padding-bottom: calc(var(--spacing) * 32);
@@ -1239,9 +1174,6 @@
   }
   .text-\[\#222222\] {
     color: #222222;
-  }
-  .text-\[\#\] {
-    color: #;
   }
   .text-black {
     color: var(--color-black);
@@ -1500,13 +1432,6 @@
       }
     }
   }
-  .hover\:bg-yellow-600 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-yellow-600);
-      }
-    }
-  }
   .hover\:before\:size-\[900px\] {
     &:hover {
       @media (hover: hover) {
@@ -1536,16 +1461,6 @@
   .md\:top-5 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 5);
-    }
-  }
-  .md\:top-6 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 6);
-    }
-  }
-  .md\:top-7 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 7);
     }
   }
   .md\:top-8 {
@@ -1648,11 +1563,6 @@
       padding-bottom: calc(var(--spacing) * 0);
     }
   }
-  .md\:text-left {
-    @media (width >= 48rem) {
-      text-align: left;
-    }
-  }
   .md\:text-5xl {
     @media (width >= 48rem) {
       font-size: var(--text-5xl);
@@ -1683,11 +1593,6 @@
       margin-right: calc(var(--spacing) * 24);
     }
   }
-  .lg\:grid-cols-2 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
   .lg\:grid-cols-3 {
     @media (width >= 64rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -1706,16 +1611,6 @@
   .lg\:pb-0 {
     @media (width >= 64rem) {
       padding-bottom: calc(var(--spacing) * 0);
-    }
-  }
-  .lg\:pb-2 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 2);
-    }
-  }
-  .lg\:pb-5 {
-    @media (width >= 64rem) {
-      padding-bottom: calc(var(--spacing) * 5);
     }
   }
   .lg\:pl-16 {
@@ -1837,48 +1732,6 @@
   syntax: "*";
   inherits: false;
   initial-value: solid;
-}
-@property --tw-gradient-position {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-from {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-via {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-to {
-  syntax: "<color>";
-  inherits: false;
-  initial-value: #0000;
-}
-@property --tw-gradient-stops {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-via-stops {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-gradient-from-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 0%;
-}
-@property --tw-gradient-via-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 50%;
-}
-@property --tw-gradient-to-position {
-  syntax: "<length-percentage>";
-  inherits: false;
-  initial-value: 100%;
 }
 @property --tw-leading {
   syntax: "*";
